# drone-detector

./: .clang-format  .clangd  .cppcheck_suppressions.txt  .gitignore  AGENTS.md  CLANGD_FIX_SUMMARY.md  CPPCHECK_FIX_REPORT.md  ClangD config.rar  DEADLOCK_FIXES_SUMMARY.md  DEPENDENCY_VERIFICATION.txt  EDA_COMMENT_INVESTIGATION_REPORT.md  EDA_DIAMOND_FIXES_IMPLEMENTATION_SUMMARY.md  EDA_DIAMOND_FIX_REPORT.md  EDA_DIAMOND_MEMORY_SAFETY_VERIFICATION_REPORT.md  EDA_DIAMOND_PIPELINE_SUMMARY.md  EDA_FIXES_SUMMARY.md  EDA_FIX_SUMMARY.md  EDA_FULL_CODE.txt  EDA_TIMING_FORENSIC_AUDIT_PART1.md  EDA_TIMING_FORENSIC_AUDIT_PART3.md  EDA_TIMING_FORENSIC_AUDIT_PART4.md  ENHANCEMENTS_SUMMARY.md  FIXES_APPLIED.md  FIXES_SUMMARY.md  IMPLEMENTATION_REPORT.txt  INVESTIGATION_REPORT.md  MAHALANOBIS_FIXES_REPORT.md  NEWPROMT.txt  REPORT_2_STAGE_3_RED_TEAM.md  REPORT_3_STAGE_4_DIAMOND_PART1-2.md  REPORT_4_STAGE_4_DIAMOND_FINAL.md  REPORT_4_STAGE_4_DIAMOND_PART3.md  REPORT_4_STAGE_4_DIAMOND_PART4.md  SAFETY_FIX_REPORT.md  SECURITY_IMPROVEMENTS.md  VERIFICATION_SUMMARY.txt  adsbtx_vs_eda.diff  collect_eda_code.bat  collect_eda_code.ps1  collect_eda_code.sh  (+32 more)
.github/: codeql-config.yml
.opencode/: package-lock.json
enhanced_drone_analyzer/: audio_alerts.hpp  constants.hpp  database.cpp  database.hpp  drone_scanner_ui.cpp  (+22 more)
firmware/application/apps/enhanced_drone_analyzer/tests/: CMakeLists.txt  README.md  test_drone_validation.cpp  test_median_filter.cpp  test_spectral_analyzer.cpp
firmware/application/apps/enhanced_drone_analyzer/tests/mocks/: chibios_mock.hpp  portapack_mock.hpp
(+3336 files in other folders)
